Version 16.47 - 5 December 2014

- do not crash loading stage2 in Virtual PC (mga#14117)
- bootloader config:
  o do not crash if fstab contains a bind mount on a file (mga#14657)

Version 16.45 - 26 October 2014

- drakx-in-chroot:
  o pre-create /dev/null & co again (for draklive)
- fix selecting of uneeded locales (mga#3723)

Version 16.44 - 23 October 2014

- drakx-in-chroot:
  o document --stage2-update in --help
  o mount /dev -o ro
  o try harder to umount everything when sg went havroc

Version 16.43 - 20 October 2014

- drakx-in-chroot:
  o adapt to the fact that stage2 expects a /dev fully populated by udev

Version 16.42 - 18 September 2014

- only allow GRUB2 when booting on btrfs

Version 16.41 - 31 August 2014

- allow /boot on btrfs
- recognize new kernel-3.17 drivers

Version 16.40 - 22 August 2014

- adwaita-gtk3-theme no longer provides a settings.ini file
- log X.org server logs when it fails to start up (mga#13471, ...)
- recognize hyper-v paravirtual network driver

Version 16.38 - 11 July 2014

- adwaita-gtk3-theme no longer provides a settings.ini file
- set locale path to /usr/share/locale so that translations may be used
  during install
- try fix auto detect mode tried first
- try modesetting driver last

Version 16.37 - 3 July 2014

- fix /etc/fstab writing (mga#13114, also reported by Joseph Wang)
- partitioning:
  o improve fs sorting in combo box (mga#13640)

Version 16.34.2 -  4 July 2014

- try modesetting before fbdev driver
- try auto detect Xorg settings by default before trying fbdev & vesa drivers
- let udev handle floppies

Version 16.34.1 -  1 July 2014

- default to chrony if found
- fix export of correct distro_release & distro_release_information subroutines
- fix unnecessary '-noleaf' argument passed to 'find' in timezone.pm that
  breaks with busybox implementation
- fix not being able to select packages when list contains only one (mga#13492)

Version 16.33 - 18 June 2014
