@@ -1,3 +1,5 @@
+- do not load hyper-v modules (already done by udev in stage1)
+
 Version 16.47 - 5 December 2014
 
 - do not crash loading stage2 in Virtual PC (mga#14117)
